yew-function-components-macro/tests/function_macro/bad-return-type-fail.stderr
error: function components must return `yew::Html`
 --> $DIR/bad-return-type-fail.rs:9:1
  |
9 | #[function_component(Comp1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/bad-return-type-fail.rs:14:5
   |
13 | fn comp(_props: &Props) -> u32 {
   |                            --- expected `yew::virtual_dom::vnode::VNode` because of return type
14 |     1
   |     ^ expected enum `yew::virtual_dom::vnode::VNode`, found integer
